# cogwit-sdk

./: .gitignore  pyproject.toml
.github/workflows/: test.yml
cogwit-sdk/: __init__.py
cogwit-sdk/cogwit/: cogwit.py
cogwit_sdk/: __init__.py  responses.py
cogwit_sdk/cogwit/: cogwit.py
cogwit_sdk/infrastructure/: json_encoder.py  send_api_request.py
cogwit_sdk/modules/search/: SearchType.py
tests/cogwit/: test_cogwit_add.py  test_cogwit_cognify.py  test_cogwit_search.py
tests/end-to-end/: use_cogwit_sdk_test.py
tests/infrastructure/: test_send_api_request.py
