[project]
name = "cogwit-sdk"
version = "0.1.0"
description = "SDK for communicating with the Cogwit API"
readme = "README.md"

requires-python = ">=3.10, <=3.13"

dependencies = [
    "aiohttp==3.12.15",
    "pydantic==2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogwit-sdk"]
