[project]
name = "cogwit_sdk"
version = "0.1.7"
description = "SDK for communicating with the Cogwit API"
readme = "README.md"

requires-python = ">=3.10, <=3.13"

dependencies = [
    "aiohttp==3.12.15",
    "pydantic==2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogwit_sdk"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.0",
]
